# ChangeLog for dev-python/cython
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.92 2013/02/09 21:22:43 mgorny Exp $

  09 Feb 2013; Michał Górny <mgorny@gentoo.org> cython-0.18-r1.ebuild:
  Use a weaker dep on sphinx, it does not import source code.

  09 Feb 2013; Michał Górny <mgorny@gentoo.org> cython-0.18-r1.ebuild:
  As explained in bug 456318, numpy is really a dependency when compiling code
  that uses numpy or in tests. Therefore, adjust the dep. Thanks to Matěj Laitl
  for insight.

  09 Feb 2013; Michał Górny <mgorny@gentoo.org> cython-0.18-r1.ebuild:
  Use sphinx-generated docs and remove outdated examples. Adjust description to
  match one used upstream. Fix install phase. Suggestions were from bug #456318.

*cython-0.18-r1 (09 Feb 2013)

  09 Feb 2013; Michał Górny <mgorny@gentoo.org> +cython-0.18-r1.ebuild:
  Migrate to distutils-r1.

*cython-0.18 (04 Feb 2013)

  04 Feb 2013; Patrick Lauer <patrick@gentoo.org> +cython-0.18.ebuild:
  Bump

*cython-0.17.4 (11 Jan 2013)

  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +cython-0.17.4.ebuild:
  Bump for #451260

*cython-0.17.2 (29 Nov 2012)

  29 Nov 2012; Patrick Lauer <patrick@gentoo.org> +cython-0.17.2.ebuild:
  Bump

*cython-0.17.1 (16 Nov 2012)

  16 Nov 2012; Patrick Lauer <patrick@gentoo.org> +cython-0.17.1.ebuild:
  Bump for #442946

  28 Jun 2012; Jeroen Roovers <jer@gentoo.org> cython-0.16.ebuild:
  Stable for HPPA (bug #418291).

  09 Jun 2012; Jeff Horelick <jdhore@gentoo.org> cython-0.16.ebuild:
  marked x86 per bug 418291

  07 Jun 2012; Brent Baude <ranger@gentoo.org> cython-0.16.ebuild:
  Marking cython-0.16 ppc for bug 418291

  06 Jun 2012; Brent Baude <ranger@gentoo.org> cython-0.16.ebuild:
  Marking cython-0.16 ppc64 for bug 418291

  02 Jun 2012; Agostino Sarubbo <ago@gentoo.org> cython-0.16.ebuild:
  Stable for amd64, wrt bug #418291
