@@ -16,16 +16,16 @@ EBUILD cython-0.16.ebuild 1483 SHA256 ce632cb30285c004f0bf1020a03d01d441d3cf8c87
 EBUILD cython-0.17.1.ebuild 1494 SHA256 6bb4214c9676b5de63969ff043d9d9b64fd02a70635f6add42ff8e92b940ca9c SHA512 de2825e0117257cde8e25a6b4c3ba645f7a925b91cd750687c663e72f4b752de18a155a02c308d1708650688fd44655faf6bb175dc28c81089b1eeb477a8d18a WHIRLPOOL 76d53167eff31729233fdfd257e83170903ff3638ca6027ff4a7f51c3673bd427e8fc9448201e20e0463fd8259e8bc5c5ed3b79a822e3cf0240e1b31a322c1f9
 EBUILD cython-0.17.2.ebuild 1494 SHA256 cb9006fa983ecd98863f65a5c9e4caf783c7f4596938b7297ae8ac8b33c8dd22 SHA512 a02bde480e9e5ed92feb6917f0ef52c9f7a2e30c79f0c58f0769a91bb14916343f8d9c44b11991d6df8f3a1d7169fdea4de88ca3067e6cf50950086c9cdfa848 WHIRLPOOL 6b894dafb93bb1369c92460558e0bb876c08314561f544bfe981a8bdad4a1e69641eb62dbd7fb3c442a6ba43e42c2f151a35d1e6ddbe24dc8860422471446cc8
 EBUILD cython-0.17.4.ebuild 1494 SHA256 88df87a07a8441917e35b2eef43f4ddefbe5962d60aa808a582ea5007edf4b7a SHA512 d9b635fbe051f924a69c5b60f50bf85f2469f9215147ef3e9481e4b8ae9d3a9bad109ac289b34e47f54d2c0323502742ac9e44d855946887f8730ecfb36c4db1 WHIRLPOOL c2e41ab0bc3df825eef06e1b733da993b5e331620e2572587a880c17c52f374c5f5095ac8430fdec1faa9e07d297d42f0d0649ac1bed9b11a8b45b9c6235e56f
-EBUILD cython-0.18-r1.ebuild 1463 SHA256 3e776d79e7fbb38b7eb2a964de9a4a3ce58c7e9f1bd7ffd4dc07f382e2491fb2 SHA512 f023ad35a022ada180a8d0fa87784a12f955a248efc6fb18a6ebf60b248e02487b565189eeadc260a9e13f1752e4a930230005ddd141611599ab96752aac987e WHIRLPOOL bfc310ce8d7bf9759fe205875b8d02e42e85f560eb75019939c3ce6d336c067dae457447386b5015a6afdc808f39b5d7620a0924b67713600f7be75a319bf002
+EBUILD cython-0.18-r1.ebuild 1554 SHA256 cbce628955ae43499d2a4a0618b10fd3ea10ec1f21cca9e4fd44f76d3dea9ae2 SHA512 a475c0cd8db593aa2bacb95a27bf8cc7fbef7083645f762228bd5b144eb6dd4c986e00730371693a4a8356e40a51f7fce727c59b8948e9db84e24b64af1ebb1c WHIRLPOOL ab694920001012317c3f848714d7ac6b2bb525257bb7496d1db66d393ce917bc574289f1969bad21ba487b5af12687de73f532196c6cef619e8e388d035ff179
 EBUILD cython-0.18.ebuild 1492 SHA256 636270d38c94ff85133be86ac12d35da418b245cead20826843996f9b78e55c8 SHA512 743db0afed9439992a00c3ab31b001c7510b47155b83bc9199843a13e0eb3636d928156f2489ff72b8d95aea63399f7731e57369f4ce0c0a745b5e690ec8d16a WHIRLPOOL d08c1046047c1d23bce8423b6bf5366a549c2e935946756f342a60ec74fc5fe8661872144830d16ae1ab9042d113621374a6c69cc141d6caaa18956ed1b7a839
-MISC ChangeLog 12185 SHA256 b8a8d484521467aacdec856d18f0387cda6bf13826eec36fd840b6b02a93b176 SHA512 c2f509d929ca389299170f9bd33d1f9242f6d6ac2413bac9ade4dbdf75fb43bbd9625c918b75db7df5f63bcde3dd18889b124f7eb99b17f69522fefd3cda1fa8 WHIRLPOOL 62864999a72cd9344277acb486fb717418d3cf33595f40ab0258cc7a9086371e08e741a9f73ace9ab2285f6b254ecee1f23114593f086a5323d29f99df8ebe94
+MISC ChangeLog 12275 SHA256 318a4e353e5864496e80c161b9eb7d87d8a553e9fb1441ab933e7e9b4f9b092b SHA512 e7254473cb4464a63dd8a64fc444e876ac9e67b737b82e15e920e52824dfd55441d52535f3c9bf65ea7d475c774ed638fc914ed35879ea46f61518fee8483e86 WHIRLPOOL 634e014713a7e1f60a0fb715448e5dec5cd592726643cc597149f4834b84aff4594da1e245a5abb65cba06d807258e14cb450e887c571d0f6f50c10d8db8dea3
 MISC metadata.xml 507 SHA256 0756ee0b23317a871b1fa05f5a8fb86d39ca0820cee63ded86551f8b76cb7406 SHA512 f51a7395e924eea4db4f342a8b28e5f93eee0773fd4558607ceaf9844861f8b16858e10937851f589011323d903551dbab8a53f4b7cabc94a3ff4d2cba5dcd9a WHIRLPOOL 82a4811a17060a51a743b2f1ebbc65df575f2c772374666f2d36be2050ab7dd3c3fecc9de96a3d20a25cf29e8be84789c376f815e8b40e2433a774df79d61dd7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJsEAQEIAAYFAlEWvi8ACgkQfXuS5UK5QB13ygP41J0RdMDOh7Wj0dFeTmSmqBKy
-JUox7ahVDcPBX6LNpgSeuTWrIp4DN/xIUF3StWfxw9Y2+QMw0yKaxz2LQ0V25MqV
-5C51Nv2Zc80IvFMESGbJnLsGjubKo6cngJ5gWb86HITxXKg6WR2ZZlmM1xmupriz
-sLMFcoKC5Y75Dv+1kw==
-=UyAv
+iJwEAQEIAAYFAlEgAy8ACgkQfXuS5UK5QB1+lgP+PcDVqBVQ2G4s8Yl51icc21B6
+11lV8U1NVfyZAebb6VUSHcdTKrTO3IxYmRMAkzmVn09BmhjkdeMsGQDLpRlkOXDu
+bmWc5ksb9Ti3tGrPotZKrNOv1y49m4ey4UOa/xSDhtSRPO5w+PDBxOwsfWSLPw4L
+rzxVd9T2CIxGmbiv9Vw=
+=F8Uc
 -----END PGP SIGNATURE-----
