@@ -1,9 +1,9 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/cython-0.18-r1.ebuild,v 1.4 2013/02/09 21:22:43 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/cython-0.18-r1.ebuild,v 1.5 2013/02/16 22:07:28 mgorny Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_5,2_6,2_7,3_1,3_2} )
+PYTHON_COMPAT=( python{2_5,2_6,2_7,3_1,3_2,3_3} )
 
 inherit distutils-r1 flag-o-matic
 
@@ -19,10 +19,13 @@ SLOT="0"
 KEYWORDS="~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x64-solaris ~x86-solaris"
 IUSE="doc test"
 
+# Note: update numpy dep when it is fixed for py3.3.
 RDEPEND=""
 DEPEND="${RDEPEND}
 	doc? ( dev-python/sphinx )
-	test? ( >=dev-python/numpy-1.6.1-r1[${PYTHON_USEDEP}] )"
+	test? (
+		>=dev-python/numpy-1.6.1-r1[$(python_gen_usedep 'python2*' 'python3_[12]' )]
+	)"
 
 S="${WORKDIR}/${MY_PN}-${PV%_*}"
 
