@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/cython
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.92 2013/02/09 21:22:43 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.93 2013/02/16 22:07:28 mgorny Exp $
+
+  16 Feb 2013; Michał Górny <mgorny@gentoo.org> cython-0.18-r1.ebuild:
+  Enable py3.3.
 
   09 Feb 2013; Michał Górny <mgorny@gentoo.org> cython-0.18-r1.ebuild:
   Use a weaker dep on sphinx, it does not import source code.
